--- a/Gxdzwxfangan/Gxdzwxfangan.Bll/Gxdzwxfangan.Bll.csproj
+++ b/Gxdzwxfangan/Gxdzwxfangan.Bll/Gxdzwxfangan.Bll.csproj
@@ -39,8 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ReceiveTaskBll.cs" />
     <Compile Include="SendTaskBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaskSortBll.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gxdzwxfangan.Dal\Gxdzwxfangan.Dal.csproj">
