--- a/Gxdzwxfangan/Gxdzwxfangan.Model/Gxdzwxfangan.Model.csproj
+++ b/Gxdzwxfangan/Gxdzwxfangan.Model/Gxdzwxfangan.Model.csproj
@@ -42,6 +42,7 @@
     <Compile Include="MyTaskInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task.cs" />
+    <Compile Include="Task_Receive.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
