--- a/Gxdzwxfangan/Gxdzwxfangan.Model/Gxdzwxfangan.Model.csproj
+++ b/Gxdzwxfangan/Gxdzwxfangan.Model/Gxdzwxfangan.Model.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyTaskInfo.cs" />
+    <Compile Include="PersonalInfoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="Task_Receive.cs" />
