--- a/Gxdzwxfangan/Gxdzwxfangan/Gxdzwxfangan.csproj
+++ b/Gxdzwxfangan/Gxdzwxfangan/Gxdzwxfangan.csproj
@@ -365,6 +365,7 @@
     <Content Include="Scripts\Jquery\jquery.validate.js" />
     <Content Include="Scripts\Jquery\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\packpageindex\SendPackage.js" />
+    <Content Include="Scripts\Register\Personal.js" />
     <Content Include="Scripts\rotate\CJL.0.1.min.js" />
     <Content Include="Scripts\rotate\ImageTrans.js" />
     <Content Include="Scripts\rotate\jquery.rotate.1-1.js" />
@@ -541,6 +542,7 @@
     <None Include="Properties\PublishProfiles\Gxdzwxfangan.pubxml" />
     <Content Include="Views\Home\GxfaWxExampleReceive.cshtml" />
     <Content Include="Views\Home\GxfaWxFl2.cshtml" />
+    <Content Include="Views\Home\GxfaWxPersonal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gxdzwxfangan.Bll\Gxdzwxfangan.Bll.csproj">
